--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,8 +45,9 @@ dependencies:
   salomon_bottom_bar: ^3.3.2
   simple_icons: ^7.10.0
   http: ^0.13.5
-  wifi: ^0.1.5
+  flutter_slidable: ^3.0.0
   wifi_iot: ^0.3.18
+  font_awesome_flutter: ^10.4.0
   
 
 dev_dependencies:
